--- a/templates/messages.html
+++ b/templates/messages.html
@@ -51,7 +51,7 @@
         <div class="modal fade" id="NewMessageModal" tabindex="-1" aria-labelledby="NewMessageModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
-                <form action="/search" method="POST">
+                <form action="/new_message" method="POST">
                   {% csrf_token %}
                   <div class="modal-header">
                     <h1 class="modal-title fs-5" id="NewMessageModalLabel">Kullanıcı Adı İle Arayın</h1>
